log
Thu Mar 17 21:54:40 HSP 2022: 
 list.c | 38 +++++++++++++++++++++++++++++++++++++-
 1 file changed, 37 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:78:15: error: unused variable 'new' [-Werror=unused-variable]
   78 |         Node *new=createNode(data);
      |               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
2562c18
Thu Mar 17 22:26:26 HSP 2022: 
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:78:15: error: unused variable 'new' [-Werror=unused-variable]
   78 |         Node *new=createNode(data);
      |               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
ee972e5
Thu Mar 17 22:26:37 HSP 2022: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
aedfd38
Thu Mar 17 22:28:23 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fb21e3a
Thu Mar 17 22:29:00 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dcd98a5
Thu Mar 17 23:09:30 HSP 2022: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
c7125d0
Mon Mar 21 06:43:06 HSP 2022: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
test.c: In function 'pushCurrent':
test.c:448:5: error: 'main' is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: 'main' defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:106:6: error: 'cleanList' defined but not used [-Werror=unused-function]
  106 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:92:8: error: 'popBack' defined but not used [-Werror=unused-function]
   92 | void * popBack(List * list) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
09059f8
Mon Mar 21 06:43:56 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
1b368f0
Mon Mar 21 06:49:35 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a1993ec
Mon Mar 21 07:01:50 HSP 2022: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
58b2eb5
